--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "dependencies": {
     "@fmidev/metolib": "^2.0.6",
     "leaflet": "^1.3.4",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react@next": "^16.6.3",
+    "react-dom@next": "^16.6.3",
     "react-leaflet": "^2.1.2",
-    "react-scripts": "2.1.1",
+    "react-scripts@next": "2.1.1",
     "styled-components": "^4.1.1"
   },
   "scripts": {
