--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "private": true,
   "dependencies": {
     "@fmidev/metolib": "^2.0.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "babel-polyfill": "^6.26.0",
     "leaflet": "^1.3.4",
+    "npm": "^6.6.0",
     "react": "^16.7.0-alpha",
     "react-dom": "^16.7.0-alpha",
     "react-leaflet": "^2.1.2",
+    "react-leaflet-search": "^0.6.0",
     "react-scripts": "2.0.5",
+    "recharts": "^1.4.2",
     "styled-components": "^4.1.1"
   },
   "scripts": {
