--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "climate-map-challenge",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://quynhquynh.github.io/climate-map-challenge/",
   "dependencies": {
     "@fmidev/metolib": "^2.0.6",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-polyfill": "^6.26.0",
+    "gh-pages": "^2.0.1",
     "leaflet": "^1.3.4",
     "npm": "^6.6.0",
     "react": "^16.7.0-alpha",
@@ -22,6 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
