--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "babel-polyfill": "^6.26.0",
     "gh-pages": "^2.0.1",
     "leaflet": "^1.3.4",
-    "npm": "^6.6.0",
     "react": "^16.7.0-alpha",
     "react-dom": "^16.7.0-alpha",
     "react-leaflet": "^2.1.2",
@@ -36,5 +35,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0"
+  }
 }
