--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@fmidev/metolib": "^2.0.6",
     "leaflet": "^1.3.4",
-    "react": "^16.7.0-alpha",
-    "react-dom": "^16.7.0-alpha",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-leaflet": "^2.1.2",
     "react-scripts": "2.0.5",
     "styled-components": "^4.1.1"
