--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "@fmidev/metolib": "^2.0.6",
+    "@material-ui/core": "^4.11.4",
+    "chart.js": "^3.3.0",
     "leaflet": "^1.3.4",
     "react": "^16.7.0-alpha",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^16.7.0-alpha",
     "react-leaflet": "^2.1.2",
     "react-scripts": "2.0.5",
+    "react-vis": "^1.11.7",
+    "react-vis-styles": "^0.3.7",
     "styled-components": "^4.1.1"
   },
   "scripts": {
