--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fmidev/metolib": "^2.0.6",
+    "@material-ui/core": "^4.12.3",
     "leaflet": "^1.3.4",
     "react": "^16.7.0-alpha",
     "react-dom": "^16.7.0-alpha",
