--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "climate-map-challenge",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@fmidev/metolib": "^2.0.6",
     "leaflet": "^1.3.4",
